--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,39 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
-body{
-  background-color: black;
-}
+
+.heroheading{
+  font-family: 'Press Start 2P', cursive;}
 /* Register Page */
 .regsiterbutton{
   font-family: 'Orbitron', sans-serif;
+}
+/* BayWindowSlider.css */
+
+.bay-window {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-color: #f0f0f0; /* Set your background color */
+}
+
+.window-image {
+  flex: 1;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  transition: transform 0.3s ease-in-out;
+}
+
+.window-image.left {
+  transform-origin: left;
+}
+
+.window-image.right {
+  transform-origin: right;
 }
 
 .video-container {
